# MLXGateway

./: .gitignore  README.md  pyproject.toml  transcript.txt
infinite-canvas-editor/: README.md  index.html  package-lock.json  package.json  vite.config.ts
infinite-canvas-editor/src/: App.tsx  index.css
infinite-canvas-editor/src/api/: gateway.ts
infinite-canvas-editor/src/components/: EditImageModal.tsx  ImageEditModal.tsx
infinite-canvas-editor/src/components/canvas/: CanvasNode.tsx  CanvasNodeBody.tsx  CanvasToolbar.tsx  InfiniteCanvas.tsx  NodeConnections.tsx
infinite-canvas-editor/src/hooks/: useCanvasInteraction.ts  useKeyboardShortcuts.ts  useNodeDrag.ts  useVideoExport.ts
infinite-canvas-editor/src/stores/: canvasStore.ts  gatewayStore.ts  imageEditStore.ts  projectStore.ts  timelineStore.ts
infinite-canvas-editor/src/types/: canvas.ts  timeline.ts
infinite-canvas-editor/src/utils/: connectionInputs.ts  coordinates.ts  ffmpeg.ts  imageProcess.ts  mediaDuration.ts  mlxDefaults.ts  thumbnails.ts
src/mlxgateway/: config.py  main.py  proxy.py
src/mlxgateway/chat/: generator.py  router.py  schema.py
src/mlxgateway/embeddings/: batcher.py  router.py  schema.py  service.py
src/mlxgateway/images/: router.py  schema.py  service.py
src/mlxgateway/middleware/: auth.py  corp.py  logging.py
src/mlxgateway/models/: base_loader.py  cache.py  gguf_loader.py  loader.py  router.py
src/mlxgateway/utils/: gpu.py  logger.py  static.py
src/mlxgateway/video/: router.py  schema.py  service.py
src/mlxgateway/vlm/: generator.py  utils.py
(+12 files in other folders)
